--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="「若者の力でヘルスケアの社会課題を解決する」inochi学生プロジェクト、「みんなでinochiの大切さと未来について考え、行動する」一般社団法人inochi未来プロジェクトが主催するイベント">
   <meta name="keywords" content="大阪万博, 2025年, inochi学生プロジェクト, inochi未来プロジェクト, ヘルスケア, 社会課題, WAKAZO, 関西, SDGs, 課題解決, 大学生, 高校生">
 
-  <title>inochi 学生・未来フォーラム2018</title>
+  <title>inochi 学生・未来フォーラム2019</title>
 
   <!-- favicon -->
   <link rel="shortcut icon" href="img/favicon/favicon.ico">
@@ -119,7 +119,7 @@
     </section>
     <!-- Home ends -->
 
-    <!-- Aboout -->
+    <!-- Aboout　三つのブロックがこれ-->
     <section id="about">
       <div class="content-box-lg">
         <div id="about-01">
@@ -131,17 +131,23 @@
             <div class="row">
               <div class="col-12 wow fadeInDown" data-wow-duration="1s">
                 <div id="about-copy" class="text-center">
-                  <h2>課題解決のうねりを、<br/><span>関西</span>から<span>世界</span>へ</h2>
+                  <h2>inochiの共創が<br/>今始まる。</h2>
                 </div>
               </div>
 
               <div class="col-12 wow fadeInDown" data-wow-duration="2s">
                 <div id="about-body" class="text-center">
-                  <p>「若者の力でヘルスケアの社会課題を解決する」inochi学生プロジェクト、</p>
-                  <p>「みんなでinochiの大切さと未来について考え、行動する」一般社団法人 inochi未来プロジェクトが</p>
-                  <p> 主催するイベント、inochi学生・未来フォーラム2018。</p>
-                  <p>「自殺」「薬剤耐性菌」「認知症」などヘルスケアの課題を若者の力で解決しようと取り組み、</p>
-                  <p>またこの課題解決のムーブメントを、万博を介することで世界へと広げてゆきます。</p>
+                  <h5>目の前に、救えるかもしれないinochiがある。</h5>
+                  <h5>目の前に、変わるかもしれない未来がある。</h5>
+                  <h5> ならば今、若者には何ができる？</h5>
+                  <h5>共に考え抜こう。</h5>
+                  <h5>共に動き出そう。</h5>
+                  <h5>共に創り出そう。</h5>
+                  <h5>すべてのinochiが輝くその日のために。</h5>
+                  <h5>ただ見てるだけじゃない。</h5>
+                  <h5>若者から、共に創り上げよう。</h5>
+                  <h5>inochiを。そして 未来を。</h5>
+
                 </div>
               </div>
 
@@ -151,9 +157,9 @@
 
               <div class="col-12 wow fadeInDown" data-wow-duration="2s">
                 <div id="about-info" class="text-center">
-                  <h3>inochi 学生・未来フォーラム2018</h3>
-                  <h4>2018年11月25日(日)<br/>12:00-18:45 (11:00開場予定)</h4>
-                  <h4>グランフロント大阪 北館B2F <br/>ナレッジキャピタル コングレコンベンションセンター </h4>
+                  <h3>inochi 学生・未来フォーラム2019</h3>
+                  <h4>2019年11月24日(日)<br/>12:00-18:30 (11:00開場予定、懇親会19:00-21:00)</h4>
+                  <h4>DOJIMA RIVER FORUM<br/>1階HALL：フォーラム会場<br/>4階GALLERY：ギャラリーminiWAKAZOpavilion会場</h4>
                 </div>
               </div>
             </div>
@@ -187,8 +193,8 @@
                     <div class="about-events-overlay">
                       <div class="about-events-title text-center">
                         <h4>Part 1.</h4>
-                        <h3>inochi Gakusei Forum 2018</h3>
-                        <h4>自殺対策、テクノロジーから</h4>
+                        <h3>inochi Gakusei Forum 2019</h3>
+                        <h4>共に挑むヘルスケアの課題解決</h4>
                       </div>
                     </div>
                   </a>
@@ -202,8 +208,8 @@
                     <div class="about-events-overlay">
                       <div class="about-events-title text-center">
                         <h4>Part 2.</h4>
-                        <h3>WAKAZO</h3>
-                        <h4>ワカゾウよ、万博を創れ。</br>そして世界を席巻せよ。</h4>
+                        <h3>Keynote Presentation</h3>
+                        <h4>共に作る課題解決のその先に</h4>
                       </div>
                     </div>
                   </a>
@@ -217,8 +223,8 @@
                     <div class="about-events-overlay">
                       <div class="about-events-title text-center">
                         <h4>Part 3.</h4>
-                        <h3>inochi Mirai Forum 2018</h3>
-                        <h4>課題解決のうねりを、関西から世界へ</h4>
+                        <h3>中之島Panel Discussion</h3>
+                        <h4>世代を超えて共に描くinochiの都市中之島</h4>
                       </div>
                     </div>
                   </a>
@@ -237,16 +243,15 @@
       <div class="content-box-lg">
         <div class="heading wow slideInLeft" data-wow-duration="1s">
           <h4>Part 1.</h4>
-          <h3>inochi Gakusei Forum 2018</h3>
+          <h3>inochi Gakusei Forum 2019</h3>
         </div>
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 wow fadeInDown" data-wow-duration="1s">
               <div class="event-summary text-center">
-                <h2>自殺対策、テクノロジーから</h2>
-                <p>日韓の中高大学生が4ヶ月間、「自殺対策」というテーマのもとで課題解決に取り組むinochi学生フォーラム2018。</p>
-                <p>15歳から39歳の死因第1位が自殺である「絶望」の国、日本から「希望」の起点を生み出すべく、</p>
-                <p>若者がテクノロジーとコミュニティの力を信じて、ヘルスケアの一大問題に立ち向かいます。</p>
+                <h2>共に挑むヘルスケアの課題解決</h2>
+                <p>高校生が4ヶ月間、「心臓突然死を減らす」というテーマのもとで課題解決に取り組むinochi学生フォーラム2019。</p>
+                <p>7.5分に1人が心臓突然死で亡くなっている現代の日本で、若者がテクノロジーとコミュニティの力を信じて、ヘルスケアの一大問題に立ち向かいます。</p>
                 <p>当日は、コンペティションを勝ち抜いたチームによるプレゼンテーションが行われます。</p>
               </div>
             </div>
@@ -262,7 +267,7 @@
               <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1.5s">
                 <h4 class="">Facilitator</h4>
                 <h2 class="guest-name">鈴木 寛 <span>先生</span></h2>
-                <h5 class="guest-title">東京大学 教授 / 慶應義塾大学 教授</h5>
+                <h5 class="guest-title">東京大学公共政策大学院 教授 / 慶應義塾大学総合政策学部 教授</h5>
                 <h5 class="guest-title">一般社団法人 inochi 未来プロジェクト理事</h5>
               </div>
             </div>
