--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="「若者の力でヘルスケアの社会課題を解決する」inochi学生プロジェクト、「みんなでinochiの大切さと未来について考え、行動する」一般社団法人inochi未来プロジェクトが主催するイベント">
   <meta name="keywords" content="大阪万博, 2025年, inochi学生プロジェクト, inochi未来プロジェクト, ヘルスケア, 社会課題, WAKAZO, 関西, SDGs, 課題解決, 大学生, 高校生">
 
-  <title>inochi Gakusei Mirai Forum 2019 × mini WAKAZO pavilion</title>
+  <title>inochi Mirai Gakusei Forum×mini WAKAZO Pavilion</title>
 
   <!-- favicon -->
   <link rel="shortcut icon" href="img/favicon/favicon.ico">
@@ -102,7 +102,7 @@
             <div id="home-content-inner" class="text-center">
 
               <div id="home-heading">
-                <h1 id="home-heading-1">ここから始まるinochiの共創(co-creation)</h1>
+                <h1 id="home-heading-1">ここから始まるinochiの<span>共創（co-creation）</span></h1>
               </div>
 
               <div id="home-btn">
@@ -118,7 +118,7 @@
     </section>
     <!-- Home ends -->
 
-    <!-- Aboout　三つのブロックがこれ-->
+    <!-- Aboout -->
     <section id="about">
       <div class="content-box-lg">
         <div id="about-01">
@@ -130,23 +130,23 @@
             <div class="row">
               <div class="col-12 wow fadeInDown" data-wow-duration="1s">
                 <div id="about-copy" class="text-center">
-                  <h2>inochiの共創が<br/>今始まる。</h2>
+                  <h2>inochi の<span>共創</span>が　今始まる。</h2>
                 </div>
               </div>
 
               <div class="col-12 wow fadeInDown" data-wow-duration="2s">
                 <div id="about-body" class="text-center">
-                  <h5>目の前に、救えるかもしれないinochiがある。</h5>
-                  <h5>目の前に、変わるかもしれない未来がある。</h5>
-                  <h5> ならば今、若者には何ができる？</h5>
-                  <h5>共に考え抜こう。</h5>
-                  <h5>共に動き出そう。</h5>
-                  <h5>共に創り出そう。</h5>
-                  <h5>すべてのinochiが輝くその日のために。</h5>
-                  <h5>ただ見てるだけじゃない。</h5>
-                  <h5>若者から、共に創り上げよう。</h5>
-                  <h5>inochiを。そして 未来を。</h5>
-
+                  <p>目の前に、救えるかもしれないinochiがある。</p>
+                  <p>目の前に、変わるかもしれない未来がある。</p>
+                  <p>ならば今、若者には何ができる？</p>
+                  <p>共に考え抜こう。</p>
+                  <p>共に動き出そう。</p>
+                  <p>共に創り出そう。</p>
+                  <p>すべてのinochiが輝くその日のために。</p>
+                  <p>ただ見てるだけじゃない。</p>
+                  <p>若者から、共に創り上げよう。</p>
+                  <p>inochiを。</p>
+                  <p>そして 未来を。</p>
                 </div>
               </div>
 
@@ -156,9 +156,9 @@
 
               <div class="col-12 wow fadeInDown" data-wow-duration="2s">
                 <div id="about-info" class="text-center">
-                  <h3>inochi Gakusei Mirai Forum 2019 × mini WAKAZO pavilion</h3>
-                  <h4>2019年11月24日(日)<br/>12:00-18:30 (11:00開場予定、懇親会19:00-21:00)</h4>
-                  <h4>DOJIMA RIVER FORUM<br/>1階HALL：フォーラム会場<br/>4階GALLERY：ギャラリーminiWAKAZOpavilion会場</h4>
+                  <h3>inochi Gakusei Mirai Forum 2019 × mini WAKAZO Pavilion</h3>
+                  <h4>2019年11月24日(日)<br/>12:00-18:45 (11:00開場予定、懇親会19:00-21:00)</h4>
+                  <h4>DOJIMA RIVER FORUM<br/>1階HALL：フォーラム会場<br/>4階GALLERY：ギャラリーminiWAKAZOPavilion会場</h4>
                 </div>
               </div>
             </div>
@@ -248,7 +248,7 @@
           <div class="row">
             <div class="col-12 wow fadeInDown" data-wow-duration="1s">
               <div class="event-summary text-center">
-                <h2>共に挑むヘルスケアの課題解決</h2>
+                <h2>『共に挑むヘルスケアの課題解決』</h2>
                 <p>高校生が4ヶ月間、「心臓突然死を減らす」というテーマのもとで課題解決に取り組むinochi学生フォーラム2019。</p>
                 <p>7.5分に1人が心臓突然死で亡くなっている現代の日本で、若者がテクノロジーとコミュニティの力を信じて、ヘルスケアの一大問題に立ち向かいます。</p>
                 <p>当日は、コンペティションを勝ち抜いたチームによるプレゼンテーションが行われます。</p>
@@ -266,7 +266,7 @@
               <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1.5s">
                 <h4 class="">Facilitator</h4>
                 <h2 class="guest-name">鈴木 寛 <span>先生</span></h2>
-                <h5 class="guest-title">東京大学公共政策大学院 教授 / 慶應義塾大学総合政策学部 教授</h5>
+                <h5 class="guest-title">東京大学 教授 / 慶應義塾大学 教授</h5>
                 <h5 class="guest-title">一般社団法人 inochi 未来プロジェクト理事</h5>
               </div>
             </div>
@@ -278,8 +278,8 @@
               </div>
               <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1s">
                 <h4 class="">Keynote Speaker</h4>
-                <h2 class="guest-name">未定 </h2>
-                <h5 class="guest-title">Coming Soon...</h5>
+                <h2 class="guest-name">吉藤 オリィ<span>氏<span></h2>
+                <h5 class="guest-title">株式会社オリィ研究所 共同創設者<br/>代表取締役CEO</h5>
               </div>
             </div>
 
@@ -290,7 +290,7 @@
               </div>
               <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1s">
                 <h4 class="">Presenter</h4>
-                <h2 class="guest-name">未定 </h2>
+                <h2 class="guest-name">調整中 </h2>
                 <h5 class="guest-title">coming soon...</h5>
                 <h5 class="guest-title"></h5>
               </div>
@@ -303,7 +303,7 @@
               </div>
               <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1s">
                 <h4 class="">Presenter</h4>
-                <h2 class="guest-name">未定</h2>
+                <h2 class="guest-name">調整中</h2>
                 <h5 class="guest-title">coming soon...</h5>
                 <h5 class="guest-title"></h5>
               </div>
@@ -388,7 +388,7 @@
                 <div class="guest-overlay">
                   <div class="guest-info text-center">
                     <h6>澤 芳樹 <span>先生</span> </h6>
-                    <p>大阪大学大学院医学系研究科 外科学講座 心臓血管外科 教授</br>inochi未来プロジェクト理事長</p>
+                    <p>大阪大学大学院医学系研究科 外科学講座 心臓血管外科</br>教授</br>inochi未来プロジェクト</br>理事長</p>
                   </div>
                 </div>
               </div>
@@ -410,7 +410,7 @@
                 <div class="guest-overlay">
                   <div class="guest-info text-center">
                     <h6>石見 拓 <span>先生</span></h6>
-                    <p>京都大学環境安全保健機構 健康管理部門 /附属健康科学センター(予防医療学分野) 部門長<br/>教授</p>
+                    <p>京都大学環境安全保健機構 </br>健康管理部門/附属健康科学センター(予防医療学分野)</br> 部門長<br/>教授</p>
                   </div>
                 </div>
               </div>
@@ -420,8 +420,8 @@
                 <img src="img/event-01/1-guest-05.jpg" alt="guest 6" class="img-fluid">
                 <div class="guest-overlay">
                   <div class="guest-info text-center">
-                    <h6>吉藤 健太郎 <span>氏</span></h6>
-                    <p>株式会社オリィ研究所 共同創設者</span><br/>代表取締役CEO</p>
+                    <h6>坪田 一男  <span>先生</span></h6>
+                    <p>慶應義塾大学医学部 </br>眼科学教室</br>教授</p>
                   </div>
                 </div>
               </div>
@@ -432,8 +432,8 @@
                 <img src="img/event-01/1-guest-02.jpg" alt="guest 2" class="img-fluid">
                 <div class="guest-overlay">
                   <div class="guest-info text-center">
-                    <h6>And more! </h6>
-                    <p>coming soon...</p>
+                    <h6>福本　ともみ <span>氏</span></h6>
+                    <p>サントリーホールディングス</br>株式会社 執行役員</p>
                   </div>
                 </div>
               </div>
@@ -463,7 +463,7 @@
             <div class="col-12 wow fadeInDown" data-wow-duration="1.5s">
               <div class="event-summary text-center">
                 <h2>『共に作る課題解決のその先に』</h2>
-                <p>詳細未定</p>
+                <p>詳細調整中　please wait ...</p>
               </div>
             </div>
           </div>
@@ -477,18 +477,12 @@
                 <img src="img/event-02/guest-icon.png" alt="guest 1" class="img-fluid rounded-circle">
               </div>
               <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1.5s">
-                <h4 class="">Keynote Speaker</h4>
-                <h2 class="guest-name">前田 裕二 <span> 氏 </span></h2>
-                <h5 class="guest-title">SHOWROOM株式会社 代表取締役社長</h5>
+                <h4 class="">Guest Speaker</h4>
+                <h2 class="guest-name">調整中</h2>
+                <h5 class="guest-title">Coming soon...</h5>
               </div>
             </div>
           </div>
-
-        <div class="ticket-btn text-center wow fadeInUp" data-wow-duration="1.5s">
-          <a class="btn btn-outline-primary btn-general btn-conversion" href="https://inochi-gakusei-mirai-2018.peatix.com" target="_blank" title="Get Tickets Now" role="button">Get Tickets Now</a>
-        </div>
-
-      </div>
 
     </section>
     <!-- Event 02 ends -->
@@ -573,7 +567,7 @@
 
               <!-- Pnalist 02 -->
               <div class="other-guest">
-                <img src="img/event-03/3-guest-07.jpg" alt="Prof. Matsumura" class="img-fluid">
+                <img src="img/event-03/3-guest-03.jpg" alt="Prof. Matsumura" class="img-fluid">
                 <div class="guest-overlay">
                   <div class="guest-info text-center">
                     <h6> 澤 芳樹 <span>先生</span></h6>
@@ -692,27 +686,79 @@
       <div class="content-box-lg">
         <div class="heading wow slideInLeft" data-wow-duration="1s">
           <h4>Gallery</h4>
-          <h3>mini WAKAZO pavilion</h3>
+          <h3>mini WAKAZO Pavilion</h3>
         </div>
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 wow fadeInDown" data-wow-duration="1.5s">
               <div class="event-summary text-center">
-                <h2>共に創ろう、課題解決のその先の未来</br>—大阪・関西万博を通した若者の実験場（WAKAZO Pavilion)の実現へ —</h2>
-                <p>WAKAZO は、2025年大阪・関西万博において若者の共創によるパビリオン「WAKAZO Pavilion」を実現するため、</p>
+                <h2>『共に創ろう、課題解決のその先の未来』</br>—大阪・関西万博を通した若者の実験場（WAKAZO Pavilion）の実現へ —</h2>
+                <p>WAKAZO は、2025年大阪・関西万博において若者の共創によるパビリオン「WAKAZO Pavilion」を実現するため</p>
                 <p>誘致段階から中心となって精力的に活動してきました。</p>
                 <p>2018年11月に大阪・関西万博開催決定が決まり、今年度は本格的に WAKAZO Pavilion 実現に向けて歩みだしています。</p>
                 <p>今年度、「2025 年万博若者会議」を全国 4 都市で開催し、「未来の共創」を担う若者たちが200人集いました。</p>
-                <p>個々人がいま取り組んでいるプロジェクトを提示しながら、「いのちとはなにか」を議論することを通して、 共創したい「2050 年」を考えてきました。</p>
+                <p>個々人がいま取り組んでいるプロジェクトを提示しながら、「いのちとはなにか」を議論することを通して</p>
+                <p>共創したい「2050 年」を考えてきました。</p>
                 <p>その成果を、「2050年のいのちをアートする」というテーマのもと、「mini WAKAZO Pavilion」として実装します。</p>
-                <p>エピジェネティクスをヒントにデザインされた空間の中で、「生まれる」「死ぬ」「生きがい」「世代を越えて受け継ぐ」の4つのテーマをもとに、</p>
-                <p>出展者と来場者が相互にコミュニケーションをしながら、2030年の未来へ向けた課題解決、さらに2050年の未来へ向けたビジョン創出を目指し、</p>
+                <p>エピジェネティクスをヒントにデザインされた空間の中で、「生まれる」「死ぬ」「生きがい」「世代を越えて受け継ぐ」の4つのテーマをもとに</p>
+                <p>出展者と来場者が相互にコミュニケーションをしながら、2030年の未来へ向けた課題解決、さらに2050年の未来へ向けたビジョン創出を目指し</p>
                 <p>若者が実験を繰り返す空間です。</p>
               </div>
             </div>
           </div>
         </div>
+        <div class="container">
 
+          <div id="wakazo-presentation">
+            <h3>Presentation</h3>
+            <div class="container-fluid">
+
+              <div id="wakazo-contents">
+                <div class="row no-gutters">
+
+                  <div class="col-12 col-md-4 wow fadeInDown" data-wow-duration="1.5s">
+                    <div class="wakazo-content">
+                      <img src="img/event-02/image-1.jpg" alt="content 01" class="img-fluid">
+                      <div class="content-overlay">
+                        <div class="content-title text-center">
+                          <h3>調整中</h3>
+                          <h4>Coming Soon...</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-12 col-md-4 wow fadeInUp" data-wow-duration="1.5s">
+                    <div class="wakazo-content">
+                      <a href="http://inochi-gakusei.com/wakazo-earth" target="_blank">
+                        <img src="img/event-02/image-2.jpg" alt="content 02" class="img-fluid">
+                        <div class="content-overlay">
+                          <div class="content-title text-center">
+                            <h3>調整中</h3>
+                            <h4>Coming Soon...<span>（外部リンク）</span></h4>
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="col-12 col-md-4 wow fadeInDown" data-wow-duration="1.5s">
+                    <div class="wakazo-content">
+                      <img src="img/event-02/image-3.jpg" alt="content 03" class="img-fluid">
+                      <div class="content-overlay">
+                        <div class="content-title text-center">
+                          <h3>調整中</h3>
+                          <h4>Coming Soon...</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="ticket-btn text-center wow fadeInUp" data-wow-duration="1.5s">
           <a class="btn btn-outline-primary btn-general btn-conversion" href="https://inochi-gakusei-mirai-2018.peatix.com" target="_blank" title="Get Tickets Now" role="button">Get Tickets Now</a>
@@ -733,34 +779,34 @@
           <div class="container">
             <div class="row">
               <div class="col-5 text-right wow fadedeInLeft" data-wow-duration="1s">
-                <h5>12:00 - 12:10</h5>
+                <h5>12:00 - 12:15</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1s">
-                <h5>開会の辞</h5>
+                <h5>オープニング</h5>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.1s">
-                <h5>12:10 - 15:00</h5>
+                <h5>12:15 - 15:15</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.1s">
-                <h5>inochi Gakusei Forum 2018</h5>
-                <h6>自殺対策、テクノロジーから</h6>
+                <h5>Gakusei Forum 2019</h5>
+                <h6>『共に挑むヘルスケアの課題解決』</h6>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.2s">
-                <h5>15:30 - 16:40</h5>
+                <h5>15:30 - 16:30</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.2s">
-                <h5>WAKAZO</h5>
-                <h6>ワカゾウよ、万博を創れ。</br>そして世界を席巻せよ。</h6>
+                <h5>Keynote Presetation</h5>
+                <h6>『共に作る課題解決のその先に』</h6>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.3s">
-                <h5>16:50 - 18:30</h5>
+                <h5>16:30 - 18:30</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.3s">
-                <h5>inochi Mirai Forum 2018</h5>
-                <h6>課題解決のうねりを、関西から世界へ</h6>
+                <h5>中之島Panel Discussion</h5>
+                <h6>『世代を超えて共に描くinochiの都市中之島』</h6>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.4s">
@@ -771,10 +817,10 @@
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.5s">
-                <h5>19:15 - 21:15</h5>
+                <h5>19:00 - 21:00</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.5s">
-                <h5>情報交換会</h5>
+                <h5>懇親会</h5>
               </div>
             </div>
           </div>
@@ -845,18 +891,7 @@
           <div id="backups">
             <h2>後援</h2>
             <div class="row">
-              <div class="col-6 col-lg-4"><img src="img/organizers/backups/logo-mhlw.png" alt="厚生労働省" class="img-fluid"></div>
-              <div class="col-6 col-lg-4"><img src="img/organizers/backups/logo-meti.png" alt="経済産業省近畿経済産業局" class="img-fluid"></div>
-              <div class="col-6 col-lg-4"><img src="img/organizers/backups/logo-expo2025.png" alt="2025日本万国博覧会誘致委員会" class="img-fluid"></div>
-              <div class="col-6 col-lg-4"><img src="img/organizers/backups/logo-osaka-pref.png" alt="大阪府" class="img-fluid"></div>
-              <div class="col-6 col-lg-4"><h5>関西経済連合会</h5></div>
-              <div class="col-6 col-lg-4"><h5>関西経済同友会</h5></div>
-              <div class="col-6 col-lg-4"><h5>大阪商工会議所</h5></div>
-              <div class="col-lg-4 col-6"><h5>JICA関西</h5></div>
-              <div class="col-lg-4 col-6"><h5>関西SDGsプラットフォーム</h5></div>
-              <div class="col-lg-4 col-6"><img src="img/organizers/backups/logo-ova.jpg" alt="特定非営利活動法人OVA" class="img-fluid"><p>特定非営利活動法人OVA</p></div>
-              <div class="col-lg-4 col-6"><img src="img/organizers/backups/logo-befrienders.jpg" alt="認定NPO法人国際ビフレンダーズ大阪自殺防止センター" class="img-fluid"><p>認定NPO法人国際ビフレンダーズ大阪自殺防止センター</p></div>
-              <div class="col-6 col-lg-4"><h6>大阪大学大学院医学系研究科<br/>医学部附属病院 産学連携<br />クロスイノベ―ションイニシアティブ</h6></div>
+              <div class="col-6 col-lg-4"><h5>大阪市</h5></div>
             </div>
           </div>
 
@@ -893,10 +928,13 @@
                 <div class="col-1-5">
                   <a href="http://www.shinshinkagaku.jp/" target="_blank"><img src="img/organizers/supporters/logo-livearth.png" alt="logo-livearth" class="img-fluid"></a>
                 </div>
+                <div class="col-1-5">
+                  <a href="http://www.diana.co.jp/utsukushiku/" target="_blank"><img src="img/organizers/supporters/logo-livearth.png" alt="logo-livearth" class="img-fluid"></a>
+                </div>
               </div>
 
               <div id="donation" class="row">
-                <div class="col-12 text-left"><h5>Donation Partner</h5></div>
+                <div class="col-12 text-left"><h6>Donation Partner</h6></div>
                 <div class="offset-2"></div>
                 <div class="col-4">
                   <a href="https://www.resona-gr.co.jp/" target="_blank"><img src="img/organizers/supporters/logo-kawai.png" alt="logo-kawai" class="img-fluid"></a>
