--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <img src="img/about/event-02.jpg" alt="event02">
                     <div class="about-events-overlay">
                       <div class="about-events-title text-center">
-                        <h4>Special Speech</h4>
+                        <h4>Special Talk</h4>
                         <h3>Keynote Presentation</h3>
                         <h4>共に創る課題解決のその先の未来社会</h4>
                       </div>
@@ -222,7 +222,19 @@
                 </div>
               </div>
 
-              
+              <div class="col-12 col-md-4 wow fadeInUp" data-wow-duration="1s">
+                <div class="about-events">
+                  <a href="#event-04" class="smooth-scroll">
+                    <img src="img/about/event-04.jpg" alt="event04">
+                    <div class="about-events-overlay">
+                      <div class="about-events-title text-center">
+                        <h4>Part 1.</h4>
+                        <h3>WAKAZO Ceremony</h3>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
 
               <div class="col-12 col-md-4 wow fadeInUp" data-wow-duration="1s">
                 <div class="about-events">
@@ -263,11 +275,72 @@
     </section>
     <!-- About ends -->
 
+    <!-- Event 02 -->
+    <section id="event-02">
+      <div class="content-box-lg">
+        <div class="heading wow slideInLeft" data-wow-duration="1s">
+          <h4>Special Talk</h4>
+          <h3>Keynote Presentation</h3>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 wow fadeInDown" data-wow-duration="1.5s">
+              <div class="event-summary text-center">
+                <h2>『共に作る課題解決のその先の未来社会』</h2>
+                <p>これから日本は、2020の東京五輪、2025の大阪・関西万博と「今後100年の中で最も世界から注目される5年間」を迎えます。</p>
+                <p>その５年間をいかに若者が切り開いていけるのかが勝負の鍵。</p>
+                <p>そこで今フォーラム第2部では、私たちの世代のパイオニアをお迎えして、</br>
+                  参加者の皆さんとの⼀体型のトークショーを共に作り上げます。</p>
+                <p>そして「課題解決のその先」について共に考える場を提供します。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="guests">
+            <h3>Special Talk</h3>
+            <div class="row main-guest pt-2">
+              <div class="guest-icon-lg col-4 wow fadeInLeft" data-wow-duration="1.5s">
+                <img src="img/event-02/nishino.png" alt="guest 1" class="img-fluid rounded-circle">
+              </div>
+              <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1.5s">
+                <h4 class="">Keynote Speaker</h4>
+                <h2 class="guest-name">西野 亮廣 氏</h2>
+                <h5 class="guest-title">Coming soon...</h5>
+              </div>
+            </div>
+          </div>
+
+    </section>
+    <!-- Event 02 ends -->
+
+<!-- WAKAZO Ceremony starts -->
+
+<section id="event-02">
+  <div class="content-box-lg">
+    <div class="heading wow slideInLeft" data-wow-duration="1s">
+      <h4>WAKAZO Ceremony</h4>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 wow fadeInDown" data-wow-duration="1.5s">
+          <div class="event-summary text-center">
+            <h2>Coming Soon..</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+<!-- WAKAZO Ceremony ends -->
+
     <!-- Event 01 -->
     <section id="event-01">
       <div class="content-box-lg">
         <div class="heading wow slideInLeft" data-wow-duration="1s">
-          <h4>Part 1.</h4>
+          <h4>Part 2.</h4>
           <h3>inochi Gakusei Forum 2019</h3>
         </div>
         <div class="container-fluid">
@@ -451,45 +524,6 @@
     </section>
     <!-- Event 01 ends -->
 
-    <!-- Event 02 -->
-    <section id="event-02">
-      <div class="content-box-lg">
-        <div class="heading wow slideInLeft" data-wow-duration="1s">
-          <h4>Part 2.</h4>
-          <h3>Keynote Presentation</h3>
-        </div>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-12 wow fadeInDown" data-wow-duration="1.5s">
-              <div class="event-summary text-center">
-                <h2>『共に作る課題解決のその先の未来社会』</h2>
-                <p>これから日本は、2020の東京五輪、2025の大阪・関西万博と「今後100年の中で最も世界から注目される5年間」を迎えます。</p>
-                <p>その５年間をいかに若者が切り開いていけるのかが勝負の鍵。</p>
-                <p>そこで今フォーラム第2部では、私たちの世代のパイオニアをお迎えして、</br>
-                  参加者の皆さんとの⼀体型のトークショーを共に作り上げます。</p>
-                <p>そして「課題解決のその先」について共に考える場を提供します。</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="container">
-          <div class="guests">
-            <h3>Special Talk</h3>
-            <div class="row main-guest pt-2">
-              <div class="guest-icon-lg col-4 wow fadeInLeft" data-wow-duration="1.5s">
-                <img src="img/event-02/guest-icon.png" alt="guest 1" class="img-fluid rounded-circle">
-              </div>
-              <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1.5s">
-                <h4 class="">Guest Speaker</h4>
-                <h2 class="guest-name">調整中</h2>
-                <h5 class="guest-title">Coming soon...</h5>
-              </div>
-            </div>
-          </div>
-
-    </section>
-    <!-- Event 02 ends -->
 
     <!-- Event 03 -->
     <section id="event-03">
@@ -525,8 +559,8 @@
               </div>
               <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1s">
                 <h4 class="">Keynote Speaker</h4>
-                <h2 class="guest-name">未定</h2>
-                <h5 class="guest-title">Coming soon...</h5>
+                <h2 class="guest-name">山中 伸弥 教授</h2>
+                <h5 class="guest-title">京都大学iPS細胞研究所 所長</h5>
               </div>
               <!-- <div class="col-12">
               </div> -->
@@ -593,11 +627,11 @@
 
               <!-- Pnalist 05 -->
               <div class="other-guest">
-                <img src="img/event-03/3-guest-coming.jpg" alt="Mr. Salt" class="img-fluid">
+                <img src="img/event-03/3-guest-06.jpg" alt="Mr. Salt" class="img-fluid">
                 <div class="guest-overlay">
                   <div class="guest-info text-center">
-                    <h6>And more!</h6>
-                    <p>Coming soon...</p>
+                    <h6>的場 佳子 氏</h6>
+                    <p>伊藤忠商事　執行役員　情報・調査部長</p>
                   </div>
                 </div>
               </div>
@@ -774,33 +808,40 @@
           <div class="container">
             <div class="row">
               <div class="col-5 text-right wow fadedeInLeft" data-wow-duration="1s">
-                <h5>12:00 - 12:15</h5>
+                <h5>11:00 - 11:10</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1s">
                 <h5>オープニング</h5>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.1s">
-                <h5>12:15 - 15:15</h5>
+                <h5>11:10 - 11:50</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.1s">
-                <h5>inochi Gakusei Forum 2019</h5>
-                <h6>『共に挑むヘルスケアの課題解決』</h6>
+                <h5>特別講演</h5>
+                <h6>『共に創る課題解決のその先の未来社会』</h6>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.2s">
-                <h5>15:30 - 16:30</h5>
+                <h5>11:50 - 12:05</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.2s">
-                <h5>Keynote Presetation</h5>
-                <h6>『共に作る課題解決のその先に』</h6>
+                <h5>WAKAZO Ceremony</h5>
+              </div>
+
+              <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.3s">
+                <h5>13:00 - 16:10</h5>
+              </div>
+              <div class="col-7 wow fadeInRight" data-wow-duration="1.3s">
+                <h5>inochi Gakusei Forum 2019</h5>
+                <h6>『共に挑むヘルスケアの課題解決』</h6>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.3s">
                 <h5>16:30 - 18:30</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.3s">
-                <h5>中之島Panel Discussion</h5>
+                <h5>inochi Gakusei Forum 2019</h5>
                 <h6>『世代を超えて共に描くinochiの都市中之島』</h6>
               </div>
 
@@ -890,6 +931,8 @@
             <h2>後援</h2>
             <div class="row">
               <div class="col-6 col-lg-4"><h5>一般社団法人2025年<br/>日本国際博覧会協会</h5></div>
+              <div class="col-6 col-lg-4"><h5>一般財団法人AED財団</br></div>
+              <div class="col-6 col-lg-4"><h5>NPO法人大阪<br/>ライフサポート協会</h5></div>
             </div>
           </div>
 
@@ -921,6 +964,9 @@
                 <div class="col-5">
                   <a href="https://www.dojimariver.com/" target="_blank"><img src="img/organizers/supporters/logo-dojima.png" alt="logo-dojima" class="img-fluid"></a>
                 </div>
+                <div class="col-5">
+                  <a href="https://www.rohto.co.jp/" target="_blank"><img src="img/organizers/supporters/logo-rohto.png" alt="logo-rohto" class="img-fluid"></a>
+                </div>
               </div>
 
               <div id="bronze" class="row">
@@ -944,7 +990,7 @@
                   <a href="http://www.diana.co.jp/utsukushiku/" target="_blank"><img src="img/organizers/supporters/logo-diana.png" alt="logo-diana" class="img-fluid"></a>
                 </div>
                 <div class="col-1-5">
-                  <a href="http://www.diana.co.jp/utsukushiku/" target="_blank"><img src="img/organizers/supporters/logo-terumo.png" alt="logo-terumo" class="img-fluid"></a>
+                  <a href="https://www.terumo.co.jp/" target="_blank"><img src="img/organizers/supporters/logo-terumo.png" alt="logo-terumo" class="img-fluid"></a>
                 </div>
               </div>
 
