--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- Basic SEO -->
   <meta name="description" content="「若者の力でヘルスケアの社会課題を解決する」inochi学生プロジェクト、「みんなでinochiの大切さと未来について考え、行動する」一般社団法人inochi未来プロジェクトが主催するイベント">
-  <meta name="keywords" content="大阪万博, 2025年, inochi学生プロジェクト, inochi未来プロジェクト, ヘルスケア, 社会課題, WAKAZO, 関西, SDGs, 課題解決, 大学生, 高校生">
+  <meta name="keywords" content="コングコング, 西野亮廣, inochi, 命, 大阪万博, 2025年, inochi学生プロジェクト, inochi未来プロジェクト, ヘルスケア, 社会課題, WAKAZO, 関西, SDGs, 課題解決, 大学生, 高校生">
 
   <title>inochi Gakusei Mirai Forum×mini WAKAZO Pavilion</title>
 
@@ -225,7 +225,7 @@
               <div class="col-12 col-md-4 wow fadeInUp" data-wow-duration="1s">
                 <div class="about-events">
                   <a href="#event-04" class="smooth-scroll">
-                    <img src="img/about/event-04.jpg" alt="event04">
+                    <img src="img/about/event-03.jpg" alt="event04">
                     <div class="about-events-overlay">
                       <div class="about-events-title text-center">
                         <h4>Part 1.</h4>
@@ -287,11 +287,11 @@
             <div class="col-12 wow fadeInDown" data-wow-duration="1.5s">
               <div class="event-summary text-center">
                 <h2>『共に作る課題解決のその先の未来社会』</h2>
-                <p>これから日本は、2020の東京五輪、2025の大阪・関西万博と「今後100年の中で最も世界から注目される5年間」を迎えます。</p>
-                <p>その５年間をいかに若者が切り開いていけるのかが勝負の鍵。</p>
-                <p>そこで今フォーラム第2部では、私たちの世代のパイオニアをお迎えして、</br>
-                  参加者の皆さんとの⼀体型のトークショーを共に作り上げます。</p>
-                <p>そして「課題解決のその先」について共に考える場を提供します。</p>
+                <h2>キングコング　西野 亮廣 氏　登壇！</h2>
+                <p>2020年の東京五輪、2025年の大阪・関西万博と、これから日本が迎える</p>
+                <p>「今後100年で最も世界からの注目を浴びる５年間」。</p>
+                <p>そこで躍動し未来を作る立場である「若者」の在り方を、</p>
+                <p>私たちの世代のパイオニアである西野氏が語ります。</P>
               </div>
             </div>
           </div>
@@ -307,26 +307,34 @@
               <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1.5s">
                 <h4 class="">Keynote Speaker</h4>
                 <h2 class="guest-name">西野 亮廣 氏</h2>
-                <h5 class="guest-title">Coming soon...</h5>
+                <h5 class="guest-title">共に創る課題解決のその先の未来社会</h5>
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="ticket-btn text-center wow fadeInUp" data-wow-duration="1.5s">
+          <a class="btn btn-outline-primary btn-general btn-conversion" href="https://inochi-gakusei-mirai-mini-wakazo-pavilion-2019.peatix.com/" target="_blank" title="Get Tickets Now" role="button">Get Tickets Now</a>
+        </div>
 
     </section>
     <!-- Event 02 ends -->
 
 <!-- WAKAZO Ceremony starts -->
 
-<section id="event-02">
+<section id="event-0">
   <div class="content-box-lg">
     <div class="heading wow slideInLeft" data-wow-duration="1s">
-      <h4>WAKAZO Ceremony</h4>
+      <h4>Part 1.</h4>
+      <h3>WAKAZO Ceremony</h3>
     </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 wow fadeInDown" data-wow-duration="1.5s">
           <div class="event-summary text-center">
-            <h2>Coming Soon..</h2>
+            <p>本フォーラムギャラリーであるmini WAKAZO Pavilionの一部を、</p>
+            <p>WAKAZOメンバーの若者たち自らが舞台上で皆様にお披露目。</P>
+            <p>ゲストもお迎えして、若者がいま思い描いている「いのち輝く未来社会」の姿をお見せします。（予定）</p>
         </div>
       </div>
     </div>
@@ -456,6 +464,7 @@
             <h4>Judges</h4>
             <div class="other-guests owl-carousel owl-theme wow fadeInUp" data-wow-duration="1.5s">
               <!-- Judgje 01 -->
+              <!--
               <div class="other-guest">
                 <img src="img/event-01/1-guest-03.jpg" alt="guest 3" class="img-fluid">
                 <div class="guest-overlay">
@@ -465,7 +474,16 @@
                   </div>
                 </div>
               </div>
-
+            -->
+            <!-- judge 1 -->
+            <div class="other-guest">
+              <img src="img/event-01/1-guest-08.jpg" alt="guest" class="img-fluid">
+              <div class="guest-overlay">
+                <div class="guest-info text-center">
+                  <h6>Coming Soon..</h6>
+                </div>
+              </div>
+            </div>
               <!-- Judgje 02 -->
               <div class="other-guest">
                 <img src="img/event-01/1-guest-04.jpg" alt="guest 4" class="img-fluid">
@@ -593,6 +611,7 @@
               </div>
 
               <!-- Pnalist 02 -->
+              <!--
               <div class="other-guest">
                 <img src="img/event-03/3-guest-02.jpg" alt="Prof. Sawa" class="img-fluid">
                 <div class="guest-overlay">
@@ -602,6 +621,16 @@
                   </div>
                 </div>
               </div>
+            -->
+            <!-- Pnalist 02 -->
+            <div class="other-guest">
+              <img src="img/event-03/3-guest-coming.jpg" alt="guest" class="img-fluid">
+              <div class="guest-overlay">
+                <div class="guest-info text-center">
+                  <h6>Coming Soon..</h6>
+                </div>
+              </div>
+            </div>
 
               <!-- Pnalist 03 -->
               <div class="other-guest">
@@ -807,57 +836,62 @@
         <div id="time-table">
           <div class="container">
             <div class="row">
+
               <div class="col-5 text-right wow fadedeInLeft" data-wow-duration="1s">
-                <h5>11:00 - 11:10</h5>
+                <h5>12:00 - 12:10</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1s">
                 <h5>オープニング</h5>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.1s">
-                <h5>11:10 - 11:50</h5>
+                <h5>12:10 - 12:50</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.1s">
                 <h5>特別講演</h5>
-                <h6>『共に創る課題解決のその先の未来社会』</h6>
+                <h6>Keynote Presentation</h6>
+                <h6>『共に創る課題解決のその先に』</h6>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.2s">
-                <h5>11:50 - 12:05</h5>
+                <h5>12:50 - 13:05</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.2s">
-                <h5>WAKAZO Ceremony</h5>
+                <h5>mini WAKAZO Pavilion Ceremony</h5>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.3s">
-                <h5>13:00 - 16:10</h5>
+                <h5>13:10 - 16:20</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.3s">
-                <h5>inochi Gakusei Forum 2019</h5>
-                <h6>『共に挑むヘルスケアの課題解決』</h6>
+                <h5>inochi Gakusei Forum</h5>
+                <h6>『私たちが減らす。心臓突然死』</h6>
               </div>
 
               <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.3s">
                 <h5>16:30 - 18:30</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.3s">
-                <h5>inochi Gakusei Forum 2019</h5>
+                <h5>inochi Mirai Forum 2019</h5>
                 <h6>『世代を超えて共に描くinochiの都市中之島』</h6>
               </div>
 
-              <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.4s">
-                <h5>18:30 - 18:45</h5>
+
+              <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.3s">
+                <h5>19:15 - 21:15</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.4s">
                 <h5>クロージング</h5>
               </div>
 
-              <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.5s">
-                <h5>19:15 - 21:15</h5>
+              <div class="col-5 text-right wow fadeInLeft" data-wow-duration="1.3s">
+                <h5>18:30 - 18:45</h5>
               </div>
-              <div class="col-7 wow fadeInRight" data-wow-duration="1.5s">
+              <div class="col-7 wow fadeInRight" data-wow-duration="1.4s">
                 <h5>情報交換会</h5>
+                <h6>ウォーターフロント堂島（120名限定）</h6>
               </div>
+
             </div>
           </div>
         </div>
@@ -964,9 +998,6 @@
                 <div class="col-5">
                   <a href="https://www.dojimariver.com/" target="_blank"><img src="img/organizers/supporters/logo-dojima.png" alt="logo-dojima" class="img-fluid"></a>
                 </div>
-                <div class="col-5">
-                  <a href="https://www.rohto.co.jp/" target="_blank"><img src="img/organizers/supporters/logo-rohto.png" alt="logo-rohto" class="img-fluid"></a>
-                </div>
               </div>
 
               <div id="bronze" class="row">
@@ -991,6 +1022,9 @@
                 </div>
                 <div class="col-1-5">
                   <a href="https://www.terumo.co.jp/" target="_blank"><img src="img/organizers/supporters/logo-terumo.png" alt="logo-terumo" class="img-fluid"></a>
+                </div>
+                <div class="col-1-5">
+                  <a href="https://www.rohto.co.jp/" target="_blank"><img src="img/organizers/supporters/logo-rohto.png" alt="logo-rohto" class="img-fluid"></a>
                 </div>
               </div>
 
