--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- Basic SEO -->
   <meta name="description" content="「若者の力でヘルスケアの社会課題を解決する」inochi学生プロジェクト、「みんなでinochiの大切さと未来について考え、行動する」一般社団法人inochi未来プロジェクトが主催するイベント">
-  <meta name="keywords" content="キングコング, 未来, フォーラム, 未来フォーラム, 西野亮廣, inochi, 命, 大阪万博, 2025年, inochi学生プロジェクト, inochi未来プロジェクト, ヘルスケア, 社会課題, WAKAZO, 関西, SDGs, 課題解決, 大学生, 高校生">
+  <meta name="keywords" content="キングコング, 未来, フォーラム, 未来フォーラム, 西野亮廣, inochi, 命, 大阪万博, 2025年, inochi学生プロジェクト, inochi未来プロジェクト, ヘルスケア, 社会課題, WAKAZO, 関西, SDGs, 課題解決, 大学生, 高校生, 医療, 医学部">
 
   <title>inochi Gakusei Mirai Forum×mini WAKAZO Pavilion</title>
 
@@ -342,7 +342,7 @@
             <h3>Special Talk</h3>
             <div class="row main-guest pt-2">
               <div class="guest-icon-lg col-4 wow fadeInLeft" data-wow-duration="1.5s">
-                <img src="img/event-02/nishino-round.jpg" alt="guest 1" class="img-fluid rounded-circle">
+                <img src="img/event-02/nishino-round.jpg" alt="guest 1" class="img-fluid"　width="200" height="200">
               </div>
               <div class="guest-right col-8 wow fadeInRight" data-wow-duration="1.5s">
                 <h4 class="">Keynote Speaker</h4>
@@ -400,9 +400,10 @@
             <div class="col-12 wow fadeInDown" data-wow-duration="1s">
               <div class="event-summary text-center">
                 <h2>『共に挑むヘルスケアの課題解決』</h2>
-                <p>高校生が4ヶ月間、「私たちが減らす、心臓突然死」というテーマのもとで課題解決に取り組むinochi学生フォーラム2019。</p>
-                <p>7.5分に1人が心臓突然死で亡くなっている現代の日本で、若者がテクノロジーとコミュニティの力を信じて、ヘルスケアの一大問題に立ち向かいます。</p>
-                <p>当日は、コンペティションを勝ち抜いたチームによるプレゼンテーションが行われます。</p>
+                 <p>高校生が4ヶ月間、「私たちが減らす、心臓突然死」というテーマのもとで課題解決に取り組むinochi学生フォーラム2019。</p>
+                 <p>7.5分に1人が心臓突然死で亡くなっている現代の日本で、若者がテクノロジーとコミュニティの力を信じて、</p>
+                 <p>ヘルスケアの一大問題に立ち向かいます。</p>
+                 <p>当日は、コンペティションを勝ち抜いたチームによるプレゼンテーションが行われます。</p>
               </div>
             </div>
           </div>
@@ -440,7 +441,7 @@
             <div class="presenters owl-carousel owl-theme wow fadeInUp">
               <!-- Presenter 01 -->
               <div class="presenter">
-                <img src="img/event-01/1-team-01.jpg" alt="team 1" class="img-fluid">
+                <img src="img/event-01/1-team-01.jpg" alt="team 1" class="img-fluid" width="193" height="130">
                 <div class="guest-overlay">
                   <div class="presenter-info text-center">
                     <h6>進撃の大谷ガールズ</h6>
@@ -451,7 +452,7 @@
 
               <!-- Presenter 02 -->
               <div class="presenter">
-                <img src="img/event-01/1-team-02.jpg" alt="team 2" class="img-fluid">
+                <img src="img/event-01/1-team-02.jpg" alt="team 2" class="img-fluid" width="193" height="130">
                 <div class="guest-overlay">
                   <div class="presenter-info text-center">
                     <h6>夏野菜カレー</h6>
@@ -462,7 +463,7 @@
 
               <!-- Presenter 03 -->
               <div class="presenter">
-                <img src="img/event-01/1-team-03.jpg" alt="team 3" class="img-fluid">
+                <img src="img/event-01/1-team-03.jpg" alt="team 3" class="img-fluid" width="193" height="130">
                 <div class="guest-overlay">
                   <div class="presenter-info text-center">
                     <h6>いにしへの雲</h6>
@@ -473,7 +474,7 @@
 
               <!-- Presenter 04 -->
               <div class="presenter">
-                <img src="img/event-01/1-team-04.jpg" alt="team 4" class="img-fluid">
+                <img src="img/event-01/1-team-04.jpg" alt="team 4" class="img-fluid" width="193" height="130">
                 <div class="guest-overlay">
                   <div class="presenter-info text-center">
                     <h6>ざじずぜぞ</h6>
@@ -484,7 +485,7 @@
 
               <!-- Presenter 05 -->
               <div class="presenter">
-                <img src="img/event-01/1-team-05.jpg" alt="team 5" class="img-fluid">
+                <img src="img/event-01/1-team-05.jpg" alt="team 5" class="img-fluid" width="193" height="130">
                 <div class="guest-overlay">
                   <div class="presenter-info text-center">
                     <h6>すみっことんかつよしお</h6>
@@ -495,7 +496,7 @@
 
               <!-- Presenter 06 -->
               <div class="presenter">
-                <img src="img/event-01/1-team-coming.jpg" alt="team 6" class="img-fluid">
+                <img src="img/event-01/1-team-coming.jpg" alt="team 6" class="img-fluid" width="193" height="130">
                 <div class="guest-overlay">
                   <div class="presenter-info text-center">
                     <h6>10月下旬に決定！</h6>
@@ -503,13 +504,11 @@
                   </div>
                 </div>
               </div>
-
-
-            </div>
+</div>
 
             <h4>Judges</h4>
             <div class="other-guests owl-carousel owl-theme wow fadeInUp" data-wow-duration="1.5s">
-              <!-- Judgje 02 -->
+              <!-- Judge 01 -->
               <div class="other-guest">
                 <img src="img/event-01/1-guest-04.jpg" alt="guest 4" class="img-fluid">
                 <div class="guest-overlay">
@@ -520,18 +519,18 @@
                 </div>
               </div>
 
-              <!-- Judgje 03 -->
+              <!-- Judge 02 -->
               <div class="other-guest">
                 <img src="img/event-01/1-guest-05.jpg" alt="guest 5" class="img-fluid">
                 <div class="guest-overlay">
                   <div class="guest-info text-center">
                     <h6>石見 拓 <span>先生</span></h6>
-                    <p>京都大学環境安全保健機構 </br>健康管理部門/附属健康科学センター（予防医療学分野）</br> 部門長<br/>教授</p>
+                      <p>京都大学環境安全保健機構</br>健康管理部門/附属健康科学センター（予防医療学分野</br>部門長<br/>教授</p>
                   </div>
                 </div>
               </div>
 
-              <!-- Judgje 04 -->
+              <!-- Judge 03 -->
               <div class="other-guest">
                 <img src="img/event-01/1-guest-06.jpg" alt="guest 6" class="img-fluid">
                 <div class="guest-overlay">
@@ -543,7 +542,7 @@
               </div>
 
 
-              <!-- Judgje 05 -->
+              <!-- Judge 04 -->
               <div class="other-guest">
                 <img src="img/event-01/1-guest-07.jpg" alt="guest 7" class="img-fluid">
                 <div class="guest-overlay">
@@ -554,7 +553,7 @@
                 </div>
               </div>
 
-              <!-- judge 06 -->
+              <!-- Judge 05 -->
             <div class="other-guest">
               <img src="img/event-01/1-guest-08.jpg" alt="guest" class="img-fluid">
               <div class="guest-overlay">
@@ -565,7 +564,7 @@
               </div>
             </div>
 
-            <!-- judge 07 -->
+            <!-- Judge 06 -->
           <div class="other-guest">
             <img src="img/event-01/1-guest-09.jpg" alt="guest" class="img-fluid">
             <div class="guest-overlay">
@@ -644,8 +643,8 @@
             </div>
 
             <h4>Panelists</h4>
-            <div class="other-guests owl-carousel owl-theme wow fadeInUp" data-wow-duration="1.5s">
-              <!-- Pnalist 01 -->
+            <div class="other-guests" data-wow-duration="1.5s">
+              <!-- Panelist 01 -->
               <div class="other-guest">
                 <img src="img/event-03/3-guest-01.jpg" alt="Ms.Kawatake" class="img-fluid">
                 <div class="guest-overlay">
@@ -656,7 +655,7 @@
                 </div>
               </div>
 
-              <!-- Pnalist 02 -->
+              <!-- Panelist 02 -->
             <div class="other-guest">
               <img src="img/event-03/3-guest-07.jpg" alt="guest" class="img-fluid">
               <div class="guest-overlay">
@@ -667,7 +666,7 @@
               </div>
             </div>
 
-              <!-- Pnalist 03 -->
+              <!-- Panelist 03 -->
               <div class="other-guest">
                 <img src="img/event-03/3-guest-03.png" alt="Mr.Azuma" class="img-fluid">
                 <div class="guest-overlay">
@@ -678,7 +677,7 @@
                 </div>
               </div>
 
-              <!-- Pnalist 04 -->
+              <!-- Panelist 04 -->
               <div class="other-guest">
                 <img src="img/event-03/3-guest-04.jpg" alt="Mr.Hashidume" class="img-fluid">
                 <div class="guest-overlay">
@@ -689,7 +688,7 @@
                 </div>
               </div>
 
-              <!-- Pnalist 05 -->
+              <!-- Panelist 05 -->
               <div class="other-guest">
                 <img src="img/event-03/3-guest-06.jpg" alt="Mr. Salt" class="img-fluid">
                 <div class="guest-overlay">
@@ -840,7 +839,7 @@
                 <h5>13:10 - 16:20</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.3s">
-                <h5>inochi Gakusei Forum　2019</h5>
+                <h5>第一部　inochi Gakusei Forum　2019</h5>
                 <h6>『私たちが減らす。心臓突然死』</h6>
               </div>
 
@@ -848,7 +847,7 @@
                 <h5>16:30 - 18:30</h5>
               </div>
               <div class="col-7 wow fadeInRight" data-wow-duration="1.3s">
-                <h5>inochi Mirai Forum 2019</h5>
+                <h5>第二部　inochi Mirai Forum 2019</h5>
                 <h6>『世代を超えて共に描くinochiの都市中之島』</h6>
               </div>
 
